--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
+  "engines": {
+    "node": "14.1.0",
+    "npm": "6.14.4",
+    "yarn": "1.22.5"
+  },
   "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
